unpackaged/main/default/objects/Endpoint__mdt/Endpoint__mdt.object-meta.xml
<CustomObject>
    <description>Integration Endpoints.</description>
    <label>Endpoint</label>
    <pluralLabel>Endpoints</pluralLabel>
</CustomObject>