unpackaged/main/default/objects/Endpoint__mdt/fields/Credential__c.field-meta.xml
<CustomField>
    <fullName>Credential__c</fullName>
    <description>Endpoint credentials.</description>
    <inlineHelpText>Endpoint credentials.</inlineHelpText>
    <label>Credential</label>
    <referenceTo>Credential__mdt</referenceTo>
    <relationshipLabel>Endpoints</relationshipLabel>
    <relationshipName>Endpoints</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>