unpackaged/main/default/objects/Endpoint__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <description>Endpoint environment.</description>
    <inlineHelpText>Endpoint environment.</inlineHelpText>
    <label>Environment</label>
    <referenceTo>Environment__mdt</referenceTo>
    <relationshipLabel>Endpoints</relationshipLabel>
    <relationshipName>Endpoints</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>