unpackaged/main/default/objects/Endpoint__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>This field stores custom headers on a pair key-value format, so they can be included on the request.</description>
    <inlineHelpText>This field stores custom headers on a pair key-value format, so they can be included on the request.</inlineHelpText>
    <label>Headers</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>