unpackaged/main/default/objects/Endpoint__mdt/fields/RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>RedirectURI__c</fullName>
    <description>Redirect URI.</description>
    <inlineHelpText>Redirect URI.</inlineHelpText>
    <label>Redirect URI</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>