unpackaged/main/default/objects/Endpoint__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Endpoint URL.</description>
    <inlineHelpText>Endpoint URL.</inlineHelpText>
    <label>URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>