unpackaged/main/default/objects/Endpoint__mdt/listViews/AllAll.listView-meta.xml
<ListView>
    <fullName>AllAll</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Credential__c</columns>
    <columns>Environment__c</columns>
    <columns>Method__c</columns>
    <columns>RedirectURI__c</columns>
    <columns>URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>